# AOIS

files/: file.csv
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/command/: CMakeLists.txt  actioncommand.cpp  actioncommand.hpp  icommand.hpp  settabcommand.cpp  settabcommand.hpp
src/core/factory/: CMakeLists.txt  modalfactory.cpp  modalfactory.hpp
src/core/table/: CMakeLists.txt  hashtable.cpp  hashtable.hpp  itable.hpp  tablebase.cpp  tablebase.hpp  txttable.cpp  txttable.hpp
src/tui/: CMakeLists.txt
src/tui/app/: CMakeLists.txt  app.cpp  app.hpp
src/tui/menu/: CMakeLists.txt  imenu.hpp  menu.cpp  menu.hpp
